[package]
name = "brush-builtins"
description = "Builtins for a POSIX/bash shell (used by brush-shell)"
version = "0.1.0"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
bench = false

[features]
default = [
    'builtin.alias',
    'builtin.bg',
    'builtin.bind',
    'builtin.break',
    'builtin.builtin',
    'builtin.caller',
    'builtin.cd',
    'builtin.colon',
    'builtin.command',
    'builtin.compgen',
    'builtin.compopt',
    'builtin.complete',
    'builtin.continue',
    'builtin.declare',
    'builtin.dirs',
    'builtin.dot',
    'builtin.echo',
    'builtin.enable',
    'builtin.eval',
    'builtin.exec',
    'builtin.exit',
    'builtin.export',
    'builtin.false',
    'builtin.fc',
    'builtin.fg',
    'builtin.getopts',
    'builtin.hash',
    'builtin.help',
    'builtin.history',
    'builtin.jobs',
    'builtin.kill',
    'builtin.let',
    'builtin.mapfile',
    'builtin.popd',
    'builtin.printf',
    'builtin.pushd',
    'builtin.pwd',
    'builtin.read',
    'builtin.return',
    'builtin.set',
    'builtin.shift',
    'builtin.shopt',
    'builtin.suspend',
    'builtin.test',
    'builtin.times',
    'builtin.trap',
    'builtin.true',
    'builtin.type',
    'builtin.ulimit',
    'builtin.umask',
    'builtin.unalias',
    'builtin.unset',
    'builtin.wait',
]

'builtin.alias' = []
'builtin.bg' = []
'builtin.bind' = []
'builtin.break' = []
'builtin.builtin' = []
'builtin.caller' = []
'builtin.cd' = []
'builtin.colon' = []
'builtin.command' = []
'builtin.compgen' = []
'builtin.complete' = []
'builtin.compopt' = []
'builtin.continue' = []
'builtin.declare' = []
'builtin.dirs' = []
'builtin.dot' = []
'builtin.echo' = []
'builtin.enable' = []
'builtin.eval' = []
'builtin.exec' = []
'builtin.exit' = []
'builtin.export' = []
'builtin.false' = []
'builtin.fc' = []
'builtin.fg' = []
'builtin.getopts' = []
'builtin.hash' = []
'builtin.help' = []
'builtin.history' = []
'builtin.jobs' = []
'builtin.kill' = []
'builtin.let' = []
'builtin.mapfile' = []
'builtin.popd' = []
'builtin.printf' = []
'builtin.pushd' = []
'builtin.pwd' = []
'builtin.read' = []
'builtin.return' = []
'builtin.set' = []
'builtin.shift' = []
'builtin.shopt' = []
'builtin.suspend' = []
'builtin.test' = []
'builtin.times' = []
'builtin.trap' = []
'builtin.true' = []
'builtin.type' = []
'builtin.ulimit' = []
'builtin.umask' = []
'builtin.unalias' = []
'builtin.unset' = []
'builtin.wait' = []

[lints]
workspace = true

[dependencies]
brush-core = { version = "^0.4.0", path = "../brush-core" }
brush-parser = { version = "^0.3.0", path = "../brush-parser" }
cfg-if = "1.0.4"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive", "wrap_help"] }
fancy-regex = "0.17.0"
futures = "0.3.31"
itertools = "0.14.0"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tracing = "0.1.44"

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.49.0", features = ["io-util", "macros", "rt"] }

[target.'cfg(any(unix, windows))'.dependencies]
tokio = { version = "1.48.0", features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }
uucore = { version = "0.5.0", default-features = false, features = ["format"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = [
    "fs",
    "process",
    "resource",
    "signal",
    "term",
    "user",
] }
rlimit = "0.10.2"

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.18.0"

[dev-dependencies]
anyhow = "1.0.100"
pretty_assertions = { version = "1.4.1", features = ["unstable"] }
