[package]
name = "brush-core"
description = "Reusable core of a POSIX/bash shell (used by brush-shell)"
version = "0.3.5"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
bench = false

[lints]
workspace = true

[dependencies]
async-recursion = "1.1.1"
async-trait = "0.1.89"
brush-parser = { version = "^0.2.20", path = "../brush-parser" }
bon = "3.8.1"
cached = "0.56.0"
cfg-if = "1.0.4"
chrono = "0.4.42"
clap = { version = "4.5.51", features = ["derive", "wrap_help"] }
fancy-regex = "0.16.2"
futures = "0.3.31"
indexmap = "2.12.0"
itertools = "0.14.0"
normalize-path = "0.2.1"
rand = "0.9.2"
rpds = "1.2.0"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.17"
tracing = "0.1.41"

[target.'cfg(target_family = "wasm")'.dependencies]
tokio = { version = "1.48.0", features = ["io-util", "macros", "rt", "sync"] }

[target.'cfg(any(unix, windows))'.dependencies]
hostname = "0.4.1"
tokio = { version = "1.48.0", features = [
    "io-util",
    "macros",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }

[target.'cfg(windows)'.dependencies]
homedir = "=0.3.4"
whoami = "1.6.1"

[target.'cfg(unix)'.dependencies]
command-fds = "0.3.2"
nix = { version = "0.30.1", features = [
    "fs",
    "process",
    "resource",
    "signal",
    "term",
    "user",
] }
terminfo = "0.9.0"
uzers = "0.12.1"

[target.wasm32-unknown-unknown.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
uuid = { version = "1.18.1", features = ["js"] }

[dev-dependencies]
anyhow = "1.0.100"
