[package]
name = "brush-coreutils-builtins"
description = "Optional coreutils builtins for brush-shell (powered by uutils/coreutils)"
version = "0.1.0"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
bench = false

[features]
default = ['coreutils.all']

'coreutils.all' = [
    'coreutils.arch',
    'coreutils.base32',
    'coreutils.base64',
    'coreutils.basename',
    'coreutils.basenc',
    'coreutils.cat',
    'coreutils.cksum',
    'coreutils.b2sum',
    'coreutils.md5sum',
    'coreutils.sha1sum',
    'coreutils.sha224sum',
    'coreutils.sha256sum',
    'coreutils.sha384sum',
    'coreutils.sha512sum',
    'coreutils.comm',
    'coreutils.cp',
    'coreutils.csplit',
    'coreutils.cut',
    'coreutils.date',
    'coreutils.dd',
    'coreutils.df',
    'coreutils.dir',
    'coreutils.dircolors',
    'coreutils.dirname',
    'coreutils.du',
    'coreutils.echo',
    'coreutils.env',
    'coreutils.expand',
    'coreutils.expr',
    'coreutils.factor',
    'coreutils.false',
    'coreutils.fmt',
    'coreutils.fold',
    'coreutils.head',
    'coreutils.hostname',
    'coreutils.join',
    'coreutils.link',
    'coreutils.ln',
    'coreutils.ls',
    'coreutils.mkdir',
    'coreutils.mktemp',
    'coreutils.more',
    'coreutils.mv',
    'coreutils.nl',
    'coreutils.nproc',
    'coreutils.numfmt',
    'coreutils.od',
    'coreutils.paste',
    'coreutils.pr',
    'coreutils.printenv',
    'coreutils.printf',
    'coreutils.ptx',
    'coreutils.pwd',
    'coreutils.readlink',
    'coreutils.realpath',
    'coreutils.rm',
    'coreutils.rmdir',
    'coreutils.seq',
    'coreutils.shred',
    'coreutils.shuf',
    'coreutils.sleep',
    'coreutils.sort',
    'coreutils.split',
    'coreutils.sum',
    'coreutils.sync',
    'coreutils.tac',
    'coreutils.tail',
    'coreutils.tee',
    'coreutils.test',
    'coreutils.touch',
    'coreutils.tr',
    'coreutils.true',
    'coreutils.truncate',
    'coreutils.tsort',
    'coreutils.uname',
    'coreutils.unexpand',
    'coreutils.uniq',
    'coreutils.unlink',
    'coreutils.vdir',
    'coreutils.wc',
    'coreutils.whoami',
    'coreutils.yes',
]

'coreutils.arch' = ["dep:uu_arch"]
'coreutils.base32' = ["dep:uu_base32"]
'coreutils.base64' = ["dep:uu_base64"]
'coreutils.basename' = ["dep:uu_basename"]
'coreutils.basenc' = ["dep:uu_basenc"]
'coreutils.cat' = ["dep:uu_cat"]
'coreutils.cksum' = ["dep:uu_cksum"]
'coreutils.b2sum' = ["dep:uu_b2sum"]
'coreutils.md5sum' = ["dep:uu_md5sum"]
'coreutils.sha1sum' = ["dep:uu_sha1sum"]
'coreutils.sha224sum' = ["dep:uu_sha224sum"]
'coreutils.sha256sum' = ["dep:uu_sha256sum"]
'coreutils.sha384sum' = ["dep:uu_sha384sum"]
'coreutils.sha512sum' = ["dep:uu_sha512sum"]
'coreutils.comm' = ["dep:uu_comm"]
'coreutils.cp' = ["dep:uu_cp"]
'coreutils.csplit' = ["dep:uu_csplit"]
'coreutils.cut' = ["dep:uu_cut"]
'coreutils.date' = ["dep:uu_date"]
'coreutils.dd' = ["dep:uu_dd"]
'coreutils.df' = ["dep:uu_df"]
'coreutils.dir' = ["dep:uu_dir"]
'coreutils.dircolors' = ["dep:uu_dircolors"]
'coreutils.dirname' = ["dep:uu_dirname"]
'coreutils.du' = ["dep:uu_du"]
'coreutils.echo' = ["dep:uu_echo"]
'coreutils.env' = ["dep:uu_env"]
'coreutils.expand' = ["dep:uu_expand"]
'coreutils.expr' = ["dep:uu_expr"]
'coreutils.factor' = ["dep:uu_factor"]
'coreutils.false' = ["dep:uu_false"]
'coreutils.fmt' = ["dep:uu_fmt"]
'coreutils.fold' = ["dep:uu_fold"]
'coreutils.head' = ["dep:uu_head"]
'coreutils.hostname' = ["dep:uu_hostname"]
'coreutils.join' = ["dep:uu_join"]
'coreutils.link' = ["dep:uu_link"]
'coreutils.ln' = ["dep:uu_ln"]
'coreutils.ls' = ["dep:uu_ls"]
'coreutils.mkdir' = ["dep:uu_mkdir"]
'coreutils.mktemp' = ["dep:uu_mktemp"]
'coreutils.more' = ["dep:uu_more"]
'coreutils.mv' = ["dep:uu_mv"]
'coreutils.nl' = ["dep:uu_nl"]
'coreutils.nproc' = ["dep:uu_nproc"]
'coreutils.numfmt' = ["dep:uu_numfmt"]
'coreutils.od' = ["dep:uu_od"]
'coreutils.paste' = ["dep:uu_paste"]
'coreutils.pr' = ["dep:uu_pr"]
'coreutils.printenv' = ["dep:uu_printenv"]
'coreutils.printf' = ["dep:uu_printf"]
'coreutils.ptx' = ["dep:uu_ptx"]
'coreutils.pwd' = ["dep:uu_pwd"]
'coreutils.readlink' = ["dep:uu_readlink"]
'coreutils.realpath' = ["dep:uu_realpath"]
'coreutils.rm' = ["dep:uu_rm"]
'coreutils.rmdir' = ["dep:uu_rmdir"]
'coreutils.seq' = ["dep:uu_seq"]
'coreutils.shred' = ["dep:uu_shred"]
'coreutils.shuf' = ["dep:uu_shuf"]
'coreutils.sleep' = ["dep:uu_sleep"]
'coreutils.sort' = ["dep:uu_sort"]
'coreutils.split' = ["dep:uu_split"]
'coreutils.sum' = ["dep:uu_sum"]
'coreutils.sync' = ["dep:uu_sync"]
'coreutils.tac' = ["dep:uu_tac"]
'coreutils.tail' = ["dep:uu_tail"]
'coreutils.tee' = ["dep:uu_tee"]
'coreutils.test' = ["dep:uu_test"]
'coreutils.touch' = ["dep:uu_touch"]
'coreutils.tr' = ["dep:uu_tr"]
'coreutils.true' = ["dep:uu_true"]
'coreutils.truncate' = ["dep:uu_truncate"]
'coreutils.tsort' = ["dep:uu_tsort"]
'coreutils.uname' = ["dep:uu_uname"]
'coreutils.unexpand' = ["dep:uu_unexpand"]
'coreutils.uniq' = ["dep:uu_uniq"]
'coreutils.unlink' = ["dep:uu_unlink"]
'coreutils.vdir' = ["dep:uu_vdir"]
'coreutils.wc' = ["dep:uu_wc"]
'coreutils.whoami' = ["dep:uu_whoami"]
'coreutils.yes' = ["dep:uu_yes"]

[lints]
workspace = true

[dependencies]
brush-core = { version = "^0.4.0", path = "../brush-core" }

uu_arch = { version = "0.7.0", optional = true }
uu_base32 = { version = "0.7.0", optional = true }
uu_base64 = { version = "0.7.0", optional = true }
uu_basename = { version = "0.7.0", optional = true }
uu_basenc = { version = "0.7.0", optional = true }
uu_cat = { version = "0.7.0", optional = true }
uu_cksum = { version = "0.7.0", optional = true }
uu_b2sum = { version = "0.7.0", optional = true }
uu_md5sum = { version = "0.7.0", optional = true }
uu_sha1sum = { version = "0.7.0", optional = true }
uu_sha224sum = { version = "0.7.0", optional = true }
uu_sha256sum = { version = "0.7.0", optional = true }
uu_sha384sum = { version = "0.7.0", optional = true }
uu_sha512sum = { version = "0.7.0", optional = true }
uu_comm = { version = "0.7.0", optional = true }
uu_cp = { version = "0.7.0", optional = true }
uu_csplit = { version = "0.7.0", optional = true }
uu_cut = { version = "0.7.0", optional = true }
uu_date = { version = "0.7.0", optional = true }
uu_dd = { version = "0.7.0", optional = true }
uu_df = { version = "0.7.0", optional = true }
uu_dir = { version = "0.7.0", optional = true }
uu_dircolors = { version = "0.7.0", optional = true }
uu_dirname = { version = "0.7.0", optional = true }
uu_du = { version = "0.7.0", optional = true }
uu_echo = { version = "0.7.0", optional = true }
uu_env = { version = "0.7.0", optional = true }
uu_expand = { version = "0.7.0", optional = true }
uu_expr = { version = "0.7.0", optional = true }
uu_factor = { version = "0.7.0", optional = true }
uu_false = { version = "0.7.0", optional = true }
uu_fmt = { version = "0.7.0", optional = true }
uu_fold = { version = "0.7.0", optional = true }
uu_head = { version = "0.7.0", optional = true }
uu_hostname = { version = "0.7.0", optional = true }
uu_join = { version = "0.7.0", optional = true }
uu_link = { version = "0.7.0", optional = true }
uu_ln = { version = "0.7.0", optional = true }
uu_ls = { version = "0.7.0", optional = true }
uu_mkdir = { version = "0.7.0", optional = true }
uu_mktemp = { version = "0.7.0", optional = true }
uu_more = { version = "0.7.0", optional = true }
uu_mv = { version = "0.7.0", optional = true }
uu_nl = { version = "0.7.0", optional = true }
uu_nproc = { version = "0.7.0", optional = true }
uu_numfmt = { version = "0.7.0", optional = true }
uu_od = { version = "0.7.0", optional = true }
uu_paste = { version = "0.7.0", optional = true }
uu_pr = { version = "0.7.0", optional = true }
uu_printenv = { version = "0.7.0", optional = true }
uu_printf = { version = "0.7.0", optional = true }
uu_ptx = { version = "0.7.0", optional = true }
uu_pwd = { version = "0.7.0", optional = true }
uu_readlink = { version = "0.7.0", optional = true }
uu_realpath = { version = "0.7.0", optional = true }
uu_rm = { version = "0.7.0", optional = true }
uu_rmdir = { version = "0.7.0", optional = true }
uu_seq = { version = "0.7.0", optional = true }
uu_shred = { version = "0.7.0", optional = true }
uu_shuf = { version = "0.7.0", optional = true }
uu_sleep = { version = "0.7.0", optional = true }
uu_sort = { version = "0.7.0", optional = true }
uu_split = { version = "0.7.0", optional = true }
uu_sum = { version = "0.7.0", optional = true }
uu_sync = { version = "0.7.0", optional = true }
uu_tac = { version = "0.7.0", optional = true }
uu_tail = { version = "0.7.0", optional = true }
uu_tee = { version = "0.7.0", optional = true }
uu_test = { version = "0.7.0", optional = true }
uu_touch = { version = "0.7.0", optional = true }
uu_tr = { version = "0.7.0", optional = true }
uu_true = { version = "0.7.0", optional = true }
uu_truncate = { version = "0.7.0", optional = true }
uu_tsort = { version = "0.7.0", optional = true }
uu_uname = { version = "0.7.0", optional = true }
uu_unexpand = { version = "0.7.0", optional = true }
uu_uniq = { version = "0.7.0", optional = true }
uu_unlink = { version = "0.7.0", optional = true }
uu_vdir = { version = "0.7.0", optional = true }
uu_wc = { version = "0.7.0", optional = true }
uu_whoami = { version = "0.7.0", optional = true }
uu_yes = { version = "0.7.0", optional = true }
