[package]
name = "brush-experimental-builtins"
description = "*EXPERIMENTAL builtins for a POSIX/bash shell (used by brush-shell)"
version = "0.1.0"
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
bench = false

[features]
default = ['builtin.save']
'builtin.save' = ["brush-core/serde", "dep:serde_json"]

[lints]
workspace = true

[dependencies]
brush-core = { version = "^0.4.0", path = "../brush-core" }
clap = { version = "4.5.57", features = ["derive", "wrap_help"] }
serde_json = { version = "1.0.149", optional = true }
